apache-camel/springboot-camel-play/cd/backend/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: springboot-example
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:latest
          name: mysql
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysqldir
              mountPath: /var/lib/mysql
            - name: mysql-config-volume
              mountPath: /docker-entrypoint-initdb.d/
            - name: mysql-config-volume
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
            #- name: mysql-config-volume ## specify volume name
            #  mountPath: /etc/mysql/conf.d/default_auth.cnf ## path to mount file
            #  subPath: default_auth ## name of config
      volumes:
        - name: mysqldir
          hostPath:
            # Ensure the file directory is created.
            path: /run/desktop/mnt/host/c/mnt/wsl/mysql-volume
            type: DirectoryOrCreate
        - name: mysql-config-volume ## volume name
          configMap:
            name: mysql-config ## name of ConfigMap
---
apiVersion: v1
kind: Service
metadata:
  namespace: springboot-example
  name: mysql
spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None
  selector:
    app: mysql
