apache-camel/springboot-camel-play/cd/backend/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: springboot-example
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        name: redis
    spec:
      containers:
        - name: redis
          image: redis
          args: ["--appendonly", "yes"]
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: redis-volume
              mountPath: /redis-data
      volumes:
        - name: redis-volume
          emptyDir:
            sizeLimit: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: springboot-example
  name: redis
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
