apache-camel/springboot-camel-play/cd/backend/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql-ingress
  namespace: mysql-namespace
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - namespaceSelector: {} # Allows traffic from all namespaces
      ports:
        - protocol: TCP
          port: 3306 # MySQL port
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
  namespace: redis-namespace
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - namespaceSelector: {} # Allows traffic from all namespaces
      ports:
        - protocol: TCP
          port: 6379 # Redis port

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-ingress
  namespace: redis-namespace
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  ingress:
    - from:
        - namespaceSelector: {} # Allows traffic from all namespaces
      ports:
        - protocol: TCP
          port: 5672 # RabbitMQ AMQP port
        - protocol: TCP
          port: 15672 # RabbitMQ Management port
